--- a/ecomm-project/src/styles.scss
+++ b/ecomm-project/src/styles.scss
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+body 
+{
+    font-family: sans-serif;
+}
+
+.container 
+{
+    margin: 0% 5%;
+}
+
+.common-form 
+{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: auto;
+}
+
+.form-input 
+{   
+    margin-bottom: 20px;
+    padding-left: 10px;
+    height: 35px;
+    color: blueviolet;
+    border: 1px solid blueviolet;
+}
+
+.form-button 
+{
+    height: 39px;
+    color: blueviolet;
+    cursor: pointer;
+    border: 1px solid blueviolet;
+}
