login api integrated

--- a/ecomm-project/src/app/seller-auth/seller-auth.component.html
+++ b/ecomm-project/src/app/seller-auth/seller-auth.component.html
@@ -12,6 +12,7 @@
 
     <!-- Login Area -->
     <div *ngIf="showLogin" class="login">
+        <p>{{authError}}</p>
         <h1>Seller Login</h1>
         <form #loginForm = "ngForm" (ngSubmit)="login(loginForm.value)" class="common-form" >
             <input class="form-input" ngModel type="email" name="email" placeholder="Enter email">
