--- a/ecomm-project/src/app/seller-auth/seller-auth.component.scss
+++ b/ecomm-project/src/app/seller-auth/seller-auth.component.scss
@@ -34,5 +34,10 @@
         cursor: pointer;
         text-align: left;
     }
+    .error {
+        text-align: center;
+        font-size: 14px;
+        color: red;
+    }
 
 }
