--- a/ecomm-project/src/app/header/header.component.html
+++ b/ecomm-project/src/app/header/header.component.html
@@ -1,13 +1,26 @@
 <nav class="nav">
-    <h1>E-COM</h1>
-    <div class="nav-search">
+    <h1><a routerLink="/" class="logo">E-COM</a></h1>
+    <div *ngIf="menuType=='default'" class="nav-search">
         <input type="text" placeholder="Search for Product">
         <button>Search</button>
     </div>
-    <ul>
-        <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/seller-auth">Seller</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Cart(0)</a></li>
-    </ul>
+    <div [ngSwitch]="menuType">
+     <div *ngSwitchCase="'default'">
+        <ul>
+            <li><a routerLink="/">Home</a></li>
+            <li><a routerLink="/seller-auth">Seller</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Cart(0)</a></li>
+        </ul>
+     </div>
+     <div *ngSwitchCase="'seller'">
+        <ul>
+            <li><a routerLink="/seller-add-product">Add Product</a></li>
+            <li><a routerLink="/seller-home">Product List</a></li>
+            <li><a (click)="logOut()">Logout</a></li>
+            <li><a href="#">{{sellerName}}</a></li>
+        </ul>
+     </div>
+    </div>
+   
 </nav>
